# NeuroDrive

./: .env.example  .gitignore  Makefile  README.md  requirements.txt  setup.cfg
configs/: default.yaml
configs/datasets/: semic.yaml  tier1_cars_detection.yaml  tier1_road_vehicles.yaml  tier2_bdd100k.yaml  tier2_dawn.yaml  tier2_openimages.yaml
configs/training/: baseline.yaml  finetune_semic.yaml  improved.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATASETS.md  SETUP.md
models/: README.md
notebooks/: 01_exploracion_datos.ipynb  02_entrenamiento_baseline.ipynb  03_evaluacion_metricas.ipynb  04_fine_tuning_semic.ipynb  utils_colab.ipynb
scripts/: convert_to_yolo.py  download_datasets.py  quick_detect.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/data/: __init__.py  augment.py  prepare.py  validate.py
src/models/: __init__.py  detector.py  evaluate.py
src/utils/: __init__.py  export.py  visualization.py
tests/: __init__.py  test_api.py  test_config.py  test_detector.py
