[metadata]
name = visionvial
version = 0.1.0
description = Detección y clasificación de vehículos en carreteras con YOLO
long_description = file: README.md
long_description_content_type = text/markdown
author = Equipo NeuroDrive
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    ultralytics>=8.1.0
    torch>=2.0.0
    opencv-python>=4.8.0
    pyyaml>=6.0
    python-dotenv>=1.0.0

[options.packages.find]
where = .

[tool:pytest]
testpaths = tests
python_files = test_*.py
